<resources>
    <string name="app_name">bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="welcome_back_kingsley">Welcome back, Kingsley!</string>
    <string name="savings_account_balance">Savings Account Balance</string>
    <string name="_2_500_000_00">₦2,500,000.00</string>
    <string name="_5643_2451">**** **** 5643 2451</string>
    <string name="_11_22">11/22</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="book_balance">Book Balance</string>
    <string name="latest_transaction">Latest Transaction</string>

    <!--CATEGORY STRING-->
    <string name="transfer">Transfer</string>
    <string name="top_up">Mobile Top-up</string>
    <string name="paybill">Pay bills</string>
    <string name="sports">Sports/game</string>
    <string name="nigeria">Nigeria</string>

</resources>